# imvault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: mac-app-plan.md
src/imvault/: __init__.py  archive.py  browser.py  cli.py  constants.py  contacts.py  crypto.py  db.py  selector.py  viewer.py
src/imvault/templates/: reader_multi.html  reader_single.html
tests/: conftest.py  test_archive.py  test_cli.py  test_crypto.py  test_db.py  test_viewer.py
